--- a/public/styles/rankings.css
+++ b/public/styles/rankings.css
@@ -396,3 +396,10 @@
     .spotlight-2 { width: 300px; height: 300px; }
     .trophy { width: 40px; height: 55px; }
 }
+
+.loading-text {
+  color: white;
+  font-size: 1.5em;
+  text-align: center;
+  margin: 20px;
+}
